--- a/WinAPI/DialogWindow/DialogWindow.vcxproj
+++ b/WinAPI/DialogWindow/DialogWindow.vcxproj
@@ -135,6 +135,9 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="water_rain_wet_weather_drop_raindrop_cloud_icon_150802.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
