--- a/WinAPI/DialogWindow/DialogWindow.vcxproj.filters
+++ b/WinAPI/DialogWindow/DialogWindow.vcxproj.filters
@@ -29,4 +29,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="water_rain_wet_weather_drop_raindrop_cloud_icon_150802.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
