Edti ListBox items DONE

--- a/WinAPI/ListBox/ListBox.vcxproj
+++ b/WinAPI/ListBox/ListBox.vcxproj
@@ -136,7 +136,7 @@
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="dove_no_war_peace_icon_232975.ico" />
+    <Image Include="ico_for_ListBox.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
