Digit buttons DONE

--- a/WinAPI/Calculator/Calculator.vcxproj
+++ b/WinAPI/Calculator/Calculator.vcxproj
@@ -135,6 +135,10 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="ICO\ico_calc.ico" />
+    <Image Include="ICO\ico_calc_sm.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
