--- a/WinAPI/Calculator/Calculator.vcxproj.filters
+++ b/WinAPI/Calculator/Calculator.vcxproj.filters
@@ -29,4 +29,12 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="ICO\ico_calc.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ICO\ico_calc_sm.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
