--- a/WinAPI/ResourceOnlyDLL/ResourceOnlyDLL.vcxproj
+++ b/WinAPI/ResourceOnlyDLL/ResourceOnlyDLL.vcxproj
@@ -24,6 +24,27 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="buttonsbmp\square_blue\bitmap1.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_0.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_1.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_2.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_3.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_4.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_5.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_6.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_7.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_8.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_9.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_aster.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_bsp.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_clr.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_equal.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_minus.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_plus.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_point.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_slash.bmp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
