--- a/WinAPI/ResourceOnlyDLL/ResourceOnlyDLL.vcxproj.filters
+++ b/WinAPI/ResourceOnlyDLL/ResourceOnlyDLL.vcxproj.filters
@@ -24,4 +24,63 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="ButtonsBMP\square_blue\button_0.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_4.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_5.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_6.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_7.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_8.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_9.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_aster.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_bsp.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_clr.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_equal.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_minus.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_plus.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_slash.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="buttonsbmp\square_blue\bitmap1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_point.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
